# MCP-Access

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
mcp_access/: code.py  compile.py  controls.py  core.py  database.py  dispatcher.py  graph.py  graph_query.py  helpers.py  maintenance.py  properties.py  relations.py  server.py  sql.py  tips.py  tools.py  vba_exec.py  vbe.py
